paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_4/sample_003/target.compile.log
error[E0277]: `main` has invalid return type `i32`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_4/sample_003/target.rs:32:14
   |
32 | fn main() -> i32 {
   |              ^^^ `main` can only return types that implement `Termination`
   |
   = help: consider using `()`, or a `Result`

error[E0308]: mismatched types
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_4/sample_003/target.rs:4:29
  |
4 |             backing[i][j] = (i + 1) * 100 + (j + 1);
  |             -------------   ^^^^^^^^^^^^^^^^^^^^^^^ expected `i32`, found `usize`
  |             |
  |             expected due to the type of this binding

error[E0308]: mismatched types
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_4/sample_003/target.rs:22:16
   |
22 |         d[i] = (i + 1) * 7 + 3;
   |         ----   ^^^^^^^^^^^^^^^ expected `i32`, found `usize`
   |         |
   |         expected due to the type of this binding

error[E0308]: mismatched types
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_4/sample_003/target.rs:42:23
   |
42 |             x[i][j] = (i + 1) * 10 + (j + 1);
   |             -------   ^^^^^^^^^^^^^^^^^^^^^^ expected `i32`, found `usize`
   |             |
   |             expected due to the type of this binding

error[E0308]: mismatched types
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_4/sample_003/target.rs:43:23
   |
43 |             y[i][j] = (i + 1) * 20 + (j + 1);
   |             -------   ^^^^^^^^^^^^^^^^^^^^^^ expected `i32`, found `usize`
   |             |
   |             expected due to the type of this binding

error[E0308]: mismatched types
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_4/sample_003/target.rs:52:42
   |
52 |                 expect[i][j] = x[i][j] + d;
   |                                          ^ expected `i32`, found `usize`

error[E0277]: cannot add `usize` to `i32`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_4/sample_003/target.rs:52:40
   |
52 |                 expect[i][j] = x[i][j] + d;
   |                                        ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0308]: mismatched types
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_4/sample_003/target.rs:65:43
   |
65 |                 expect2[i][j] = y[i][j] + d;
   |                                           ^ expected `i32`, found `usize`

error[E0277]: cannot add `usize` to `i32`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_4/sample_003/target.rs:65:41
   |
65 |                 expect2[i][j] = y[i][j] + d;
   |                                         ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.